added working images as selectors for player selection

--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
     </head>
     <body>
         <div id="container"></div>
-        <div id="buttons">
-            <button id="rock"> Rock </button>
-            <button id="paper"> Paper </button>                        
-            <button id="scissor"> Scissor </button>
+        <div id="images">
+            <img src="images/rock.png" id="rockImg">
+            <img src="images/paper.png" id="paperImg">
+            <img src="images/scissors.png" id="scissorImg">
         </div>
     </body>
 </html>
