added a working game display

--- a/index.html
+++ b/index.html
@@ -6,11 +6,14 @@
         <meta charset="UTF-8"/>
     </head>
     <body>
-        <div id="container"></div>
         <div id="images">
             <img src="images/rock.png" id="rockImg">
             <img src="images/paper.png" id="paperImg">
             <img src="images/scissors.png" id="scissorImg">
+        </div>
+
+        <div id="gameDisplay">
+            
         </div>
     </body>
 </html>
